VIS_Project/VIS/socket/cpp/Environment_SocketServer/build/tmp/compileDebugCpp/output.txt
See file:///Users/antonia/Desktop/Desktoop/3SEM/VIS_Hartlauer_Stieger/VIS_Project/VIS/socket/cpp/Environment_SocketServer/build/tmp/compileDebugCpp/output.txt for all output for compileDebugCpp.
compiling Environment_SocketServer.cpp failed.
/Users/antonia/Desktop/Desktoop/3SEM/VIS_Hartlauer_Stieger/VIS_Project/VIS/socket/cpp/Environment_SocketServer/src/main/cpp/Environment_SocketServer.cpp:164:49: error: expected ';' at end of declaration
        SocketParam* parameter = new SocketParam{clientSocket, clientAddress};
                                                ^
                                                ;
/Users/antonia/Desktop/Desktoop/3SEM/VIS_Hartlauer_Stieger/VIS_Project/VIS/socket/cpp/Environment_SocketServer/src/main/cpp/Environment_SocketServer.cpp:189:27: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for (int clientSocket : mClientSockets) {
                          ^
1 warning and 1 error generated.

Finished compileDebugCpp, see full log file:///Users/antonia/Desktop/Desktoop/3SEM/VIS_Hartlauer_Stieger/VIS_Project/VIS/socket/cpp/Environment_SocketServer/build/tmp/compileDebugCpp/output.txt.
